# Filter

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  README.md  ball_trajectory.cpp  test_multivariate_normal_distribution.cpp
src/: discrete_algebraic_riccati_equation.h  discrete_argebraic_riccati_equation.h  extended_kalman_filter.h  kalman_filter.h  multivariate_normal_distribution.h  state_space.h
